--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,5 +6,23 @@
 			"dependsOn": [],
 			"customAuth": false
 		}
+	},
+	"api": {
+		"reactexample": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"authConfig": {
+					"additionalAuthenticationProviders": [],
+					"defaultAuthentication": {
+						"authenticationType": "API_KEY",
+						"apiKeyConfig": {
+							"description": "demp",
+							"apiKeyExpirationDays": "365"
+						}
+					}
+				}
+			}
+		}
 	}
 }
